--- a/engarmendia.html
+++ b/engarmendia.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <title>Página de Nora</title></head>
+    <title>Página de Enara</title></head>
   </head>
-  
+
   <body>
-    <h1>Nora San Saturnino</h1>
+    <h1>Enara Garmendia</h1>
   </body>
 </html>
