--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html><head><meta charset="utf-8"></head><head></head><body>
 
 <h1>Lista de ficheros</h1>
 
 <a href="https://github.com/deaw-birt/proyecto-html/blob/master/pruebaJaione.html">Jaione</a>
+<a href="https://github.com/engarmendia/DEAW03_TA03/blob/main/engarmendia.html">Enlace a la página de Enara</a> 
 
-</body>
-</html>
+
+
+
+</body></html>
